--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
+
+
+/* ---------------------- Navbar styles ---------------------- */
+
 /* Container */
-.container {
-  min-height: 100vh; /* Full screen height */
+.nav-container {
+  /*min-height: 100vh; /* Full screen height */
   background-color: #f7fafc; /* bg-gray-100 */
   display: flex;
   flex-direction: column;
@@ -11,8 +15,7 @@
 /* Navigation Bar */
 .navbar {
   background-color: #ffffff; /* bg-white */
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
-    0 4px 6px -2px rgba(0, 0, 0, 0.05); /* Example shadow, adjust as needed */
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); /* Example shadow, adjust as needed */
   border-radius: 0.5rem; /* rounded-lg */
   margin-bottom: 1rem; /* mb-4 */
   padding: 1rem 1.5rem; /* py-4 px-6 */
@@ -58,3 +61,65 @@
 .try-it-button:hover {
   background-color: #2563eb; /* hover:bg-blue-700 */
 }
+
+
+/* ---------------------- Body styles ---------------------- */
+/* Overall Container */
+.form-container {
+  background-color: #ffffff; /* bg-white */
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); /* Adjust shadow as needed */
+  border-radius: 0.5rem; /* rounded-lg */
+  margin-bottom: 1rem; /* mb-4 */
+  padding: 2rem; /* p-8 */
+  width: 100%;
+  max-width: 64rem; /* max-w-4xl */
+}
+
+/* Section Heading */
+.heading {
+  color: #4a5568; /* text-gray-700 */
+  font-size: 1.125rem; /* text-lg */
+  font-weight: 600; /* font-semibold */
+}
+
+/* Input Fields */
+.input-field {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 100%;
+  background-color: #f7fafc; /* bg-gray-100 */
+  color: #4a5568; /* text-gray-700 */
+  border: 1px solid #d2d6dc; /* border-gray-300 */
+  border-radius: 0.375rem; /* rounded */
+  padding: 0.75rem 1rem; /* py-3 px-4 */
+  line-height: 1.25; /* leading-tight */
+}
+
+.input-field:focus {
+  outline: none;
+  background-color: #ffffff; /* focus:bg-white */
+  border-color: #3182ce; /* focus:border-blue-500 */
+}
+
+/* Submit Button */
+.submit-button {
+  background-color: #3182ce; /* bg-blue-500 */
+  color: #ffffff; /* text-white */
+  font-weight: 700; /* font-bold */
+  padding: 0.5rem 1rem; /* py-2 px-4 */
+  border-radius: 0.375rem; /* rounded */
+  cursor: pointer;
+}
+
+.submit-button:hover {
+  background-color: #2c5282; /* hover:bg-blue-700 */
+}
+
+.submit-button:focus {
+  outline: none;
+  box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5); /* focus:shadow-outline */
+}
+
+
+/* ---------------------- Body styles ---------------------- */
