--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
 }
 
 .shadow {
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.2),
-    0 4px 6px -2px rgba(0, 0, 0, 0.5); /* Example shadow, adjust as needed */
+  box-shadow: 1px 2px 8px 0px rgba(0, 0, 0, 0.34);
 }
 .big-radius {
   border-radius: 20px;
@@ -29,7 +29,7 @@ html, body {
   min-height: 80px; /* Full screen height */
   background-color: #ffffff; /* bg-white */
   padding: 10px 30px;
-  margin: 10px 25px ;
+  margin: 10px 25px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -49,7 +49,7 @@ html, body {
   background-color: transparent;
   border: 1px solid #000000; /* border-blue-500 */
   padding: 0.5rem 1rem; /* py-2 px-4 */
-  margin: 10px 25px ;
+  margin: 10px 25px;
   font-weight: 600; /* font-semibold */
 }
 
@@ -72,17 +72,17 @@ html, body {
 
 /* ---------------------- Body styles ---------------------- */
 /* Overall Container */
-.form-container{
+.form-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 10px 30px;
 }
 .form {
-  min-height: 80px; 
+  min-height: 80px;
   background-color: #ffffff;
   padding: 10px 30px;
-  margin: 10px 25px ;
+  margin: 10px 25px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -136,4 +136,21 @@ html, body {
   box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5); /* focus:shadow-outline */
 }
 
-/* ---------------------- Body styles ---------------------- */
+/* ---------------------- block styles ---------------------- */
+.block-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 30px;
+}
+.block {
+  min-height: 400px; /* Full screen height */
+  background-color: #ffffff; /* bg-white */
+  padding: 10px 30px;
+  margin: 10px 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  box-sizing: border-box;
+}
