--- a/src/index.css
+++ b/src/index.css
@@ -167,3 +167,21 @@ body {
   width: 100%;
   box-sizing: border-box;
 }
+
+/* ---------------------- End section styles ---------------------- */
+.end-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.names-emails {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px; /* Adjust as needed */
+}
+
+.person {
+  margin: 0 10px; /* Adjust spacing between name-email pairs */
+}
