--- a/src/index.css
+++ b/src/index.css
@@ -211,3 +211,27 @@ body {
   font-family: 'YourFont', sans-serif;
   padding: 0px 0px;
 }
+
+
+/* ---------------------- Homepage Image section styles ---------------------- */
+
+.image-block {
+  display: flex;
+  align-items: center;
+  background-color: #f0f0f0; /* Background color */
+  padding: 20px;
+}
+
+.image-wrapper {
+  flex: 1; /* Takes up remaining space */
+  margin-right: 20px; /* Margin between image and text */
+}
+
+.text-wrapper {
+  flex: 1; /* Takes up remaining space */
+}
+
+.text-wrapper p {
+  font-size: 16px;
+  color: #333; /* Text color */
+}
