--- a/src/index.css
+++ b/src/index.css
@@ -212,34 +212,32 @@ body {
   padding: 0px 0px;
 }
 
-
 /* ---------------------- Homepage Image section styles ---------------------- */
 
 .image-block {
   display: flex;
   align-items: center;
-  background-color: rgb(202, 199, 202); /* Background color */
+  background-color: rgb(202, 199, 202);
   padding: 20px;
 }
 
 .image-wrapper {
-  flex: 1; /* Takes up remaining space */
-  margin-right: 20px; /* Margin between image and text */
-  
+  flex: 2;
+  margin-right: 20px;
+  width: 100%;
 }
 
 .text-wrapper {
-  flex: 1; /* Takes up remaining space */
+  flex: 1;
 }
 
 .text-wrapper p {
   font-size: 16px;
-  color: rgb(51, 51, 51); /* Text color */
+  color: rgb(51, 51, 51);
 }
 
 .custom-image {
-  width: 500px; /* Set the desired width */
-  height: auto; /* Maintain aspect ratio */
-  /* Add any other styles as needed */
+  width: 100%;
+  height: auto;
+  max-width: 100%;
 }
-
