--- a/src/index.css
+++ b/src/index.css
@@ -144,13 +144,13 @@ body {
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
-  align-items: flex-start; /* Align children to the start on the cross axis */
+  align-items: flex-start;
   width: 100%;
   box-sizing: border-box;
 }
 /* Submit Button */
 .submit-button {
-  align-self: flex-end; /* This aligns the submit button to the end of the flex container on the cross axis */
+  align-self: flex-end;
   background-color: #000000;
   color: #ffffff;
   font-weight: 700;
@@ -179,6 +179,7 @@ body {
 }
 .block {
   min-height: 400px;
+  max-height: 400px;
   background-color: #ffffff;
   padding: 10px 30px;
   margin: 5px 25px;
@@ -256,7 +257,8 @@ body {
 }
 
 .paper-info-block h2 {
-  margin-top: 0;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .paper-info-block ul {
@@ -267,6 +269,7 @@ body {
   color: #007bff;
   text-decoration: none;
   margin-right: 10px;
+  margin-bottom: 0px;
 }
 
 .paper-info-block a:hover {
@@ -289,25 +292,27 @@ body {
 
 .body-info-container {
   display: flex;
-  justify-content: space-between; /* Adjust this as needed */
-  gap: 20px; /* Space between columns */
+  justify-content: space-between;
+  gap: 20px;
 }
 
 .body-infoPage {
-  display: flex; /* Makes it a flex container */
-  justify-content: space-between; /* Spaces out the child elements */
-  align-items: flex-start; /* Aligns items to the top */
-  gap: 20px; /* Adjust gap between columns as needed */
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 20px;
+  margin-top: 0px;
 }
 
-.left-infoPage, .right-infoPage {
-  flex: 1; /* Both children take up equal space; you can adjust this as needed */
-  /* If you want one column to be wider, you can set specific flex values or widths */
+.left-infoPage,
+.right-infoPage {
+  flex: 1;
+  padding-top: 0px;
 }
 
 .author-list {
-  max-height: 200px; /* Adjust based on your layout needs */
-  overflow-y: auto; /* Enables vertical scrolling */
+  max-height: 200px;
+  overflow-y: auto;
   padding: 0px 0px;
 }
 
@@ -319,9 +324,48 @@ body {
   flex-wrap: wrap;
 }
 
-
 .references-container {
-  max-height: 285px; /* Adjust based on your layout needs */
-  overflow-y: auto; /* Enables vertical scrolling */
+  max-height: 285px;
+  overflow-y: auto;
   padding: 0px 0px;
+}
+
+/* ---------------------- Recom section styles ---------------------- */
+.recommendation-block {
+  background-color: #ffffff;
+  min-height: 400px;
+  padding: 10px 30px;
+  margin: 5px 25px;
+  width: 100%;
+  max-height: 400px;
+
+  box-sizing: border-box;
+}
+.recommendation-paper {
+  max-height: 310px;
+  margin-top: 0px;
+  overflow-y: auto;
+  scroll-behavior: smooth;
+}
+.recommendation-block h3 {
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.recommendation-block ul {
+  list-style: none;
+  padding: 0;
+}
+
+.recommendation-block li {
+  margin-bottom: 20px;
+}
+
+.recommendation-block li a {
+  font-weight: bold;
+  color: #007bff;
+}
+
+.recommendation-block li p {
+  margin: 5px 0;
 }
